# leoflow

./: .dockerignore  .editorconfig  .gitignore  .gitleaks.toml  .golangci.yaml  .goreleaser.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_GUIDE.md  Makefile  README.md  SECURITY.md  airflow__api_v2_monitor_health.json  airflow__ui_auth_menus.json  airflow__ui_dags.json  airflow__ui_structure_structure_data.json  buf.gen.yaml  capture_ui.py  compare_apis.py  compare_json.py  deep_diff.py  docker-compose.dev.yaml  docker-compose.yml  embed.go  full_comparison.py  go.mod  go.sum  install.sh  interactive_audit.py  leoflow__api_v2_monitor_health.json  leoflow__ui_auth_menus.json  leoflow__ui_config.json  leoflow__ui_dags.json  leoflow__ui_dags_tutorial_latest_run.json  leoflow__ui_grid_runs_tutorial.json  leoflow__ui_grid_structure_tutorial.json  mkdocs.yml  sqlc.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
audit_data/: airflow_api_v2_assets.json  airflow_api_v2_connections.json  airflow_api_v2_dag_details.json  airflow_api_v2_dag_runs.json  airflow_api_v2_dag_source.json  airflow_api_v2_dag_tags.json  airflow_api_v2_dag_warnings.json  airflow_api_v2_dags.json  airflow_api_v2_event_logs.json  airflow_api_v2_health.json  airflow_api_v2_plugins.json  airflow_api_v2_pools.json  airflow_api_v2_providers.json  airflow_api_v2_variables.json  airflow_ui_auth_me.json  airflow_ui_backfills.json  airflow_ui_connections_hook_meta.json  airflow_ui_dag_latest_run.json  airflow_ui_dags.json  airflow_ui_dashboard_dag_stats.json  airflow_ui_dashboard_historical.json  airflow_ui_dependencies.json  airflow_ui_grid_runs.json  airflow_ui_grid_structure.json  interactive_errors.json  leoflow_api_v2_assets.json  leoflow_api_v2_assets_events.json  leoflow_api_v2_dag_details.json  leoflow_api_v2_dag_runs.json  leoflow_api_v2_dag_tags.json  leoflow_api_v2_dag_warnings.json  leoflow_api_v2_dags.json  leoflow_api_v2_health.json  leoflow_api_v2_import_errors.json  leoflow_api_v2_plugins.json  leoflow_api_v2_pools.json  leoflow_api_v2_version.json  leoflow_ui_auth_me.json  leoflow_ui_calendar.json  leoflow_ui_dag_latest_run.json  (+7 more)
dags/: README.md
deploy/: Dockerfile.migrate  Dockerfile.server  Dockerfile.server.release
docs/: 404.md  adrs.md  api-reference.html  api-reference.md  architecture.md  backup-restore.md  concepts.md  configuration.md  contributing.md  dag-authoring.md  deploy.md  dev-workflow.md  editions.md  etl-staging-case-study.md  examples.md  go-api.md  index.md  installation.md  lite-web-editor.md  operating-modes.md  production-deployment.md  python-api.md  quickstart.md  reference.md  reverse-analysis-mvp.md  roadmap-to-release.md  staging-volume.md  troubleshooting.md  ui-compatibility.md  ui-walk-report.md  upgrades.md  variables-connections.md  why-leoflow.md
migrations/: 001_init_tenants_and_rbac.down.sql  001_init_tenants_and_rbac.up.sql  002_dags_and_versions.down.sql  002_dags_and_versions.up.sql  003_runs_and_instances.down.sql  003_runs_and_instances.up.sql  004_scheduler_control.down.sql  004_scheduler_control.up.sql  005_xcom_index_and_audit.down.sql  005_xcom_index_and_audit.up.sql  006_reserve_deferred_state.down.sql  006_reserve_deferred_state.up.sql  007_task_instance_note.down.sql  007_task_instance_note.up.sql  008_variables.up.sql  009_connections.up.sql  010_task_instance_scheduled_at.down.sql  011_dag_favorites.down.sql  (+14 more)
parser/: README.md  pyproject.toml
parser/leoflow_parser/: __init__.py  __main__.py  cli.py  compiler.py
parser/leoflow_parser/_shim/airflow/: _core.py
parser/leoflow_parser/_shim/airflow/providers/http/operators/: http.py
parser/leoflow_parser/_shim/airflow/sdk/: __init__.py
parser/tests/: conftest.py  test_cli.py  test_compiler.py  test_golden.py  test_scenarios.py  test_shim_edges.py
parser/tests/fixtures/: branching.py  literal_params.py  mixed_operators.py  simple_linear.py
parser/tests/golden/: bash_pipeline.json  duckdb_http_csv.json  fan_out_aggregate.json  http_operator.json  lifecycle.json  montecarlo_pi.json  taskflow_sales.json  xcom_typed.json
runtime/python/: README.md  pyproject.toml
runtime/python/leoflow_runtime/: __init__.py  __main__.py  runner.py  xcom.py
runtime/python/tests/: test_main.py  test_runner.py  test_xcom.py
(+514 files in other folders)
