[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leoflow-parser"
version = "0.1.0"
description = "Leoflow DAG parser: compiles Airflow DAGs into Leoflow dag.json."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
# The parser uses a bundled, dependency-free structural shim of Airflow (ADR 0024),
# so apache-airflow is NOT required. Only YAML + JSON-Schema are needed.
dependencies = [
    "jsonschema>=4.21",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Opt-in fallback backend: LEOFLOW_PARSER_BACKEND=airflow uses the real DagBag.
airflow = [
    "apache-airflow>=3.2,<3.3",
    "apache-airflow-providers-standard",
    "apache-airflow-providers-http",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
leoflow-parser = "leoflow_parser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["leoflow_parser"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
