[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leoflow-parser"
version = "0.1.0"
description = "Leoflow DAG parser: compiles Airflow DAGs into Leoflow dag.json."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
# Zero third-party runtime dependencies (ADR 0024): the Airflow shim is bundled
# and PyYAML is vendored (pure-Python) under leoflow_parser/_vendor. The parser
# runs on a bare CPython — no venv, no pip, no Airflow.
dependencies = []

[project.optional-dependencies]
# Opt-in fallback backend: LEOFLOW_PARSER_BACKEND=airflow uses the real DagBag.
airflow = [
    "apache-airflow>=3.2,<3.3",
    "apache-airflow-providers-standard",
    "apache-airflow-providers-http",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "jsonschema>=4.21",
    "PyYAML>=6.0",
]

[project.scripts]
leoflow-parser = "leoflow_parser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["leoflow_parser"]

[tool.ruff]
line-length = 100
target-version = "py310"
# Vendored third-party code (pure-Python PyYAML) is not ours to lint.
extend-exclude = ["leoflow_parser/_vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
# Don't count vendored third-party code toward the parser's coverage floor.
omit = ["*/leoflow_parser/_vendor/*"]
